[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ade-healthcare-docs"
version = "3.1.0"
description = "Agent Development Environment for transforming healthcare data specifications into comprehensive documentation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "dspacks", email = "dspacks@users.noreply.github.com"}
]
maintainers = [
    {name = "dspacks", email = "dspacks@users.noreply.github.com"}
]
keywords = [
    "healthcare",
    "documentation",
    "ai-agents",
    "gemini",
    "data-dictionary",
    "HITL",
    "multi-agent-system",
    "ontology-mapping",
    "OMOP",
    "LOINC"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
web = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
all = [
    "ade-healthcare-docs[dev,docs,web]",
]

[project.urls]
Homepage = "https://github.com/dspacks/rdd_orch"
Documentation = "https://github.com/dspacks/rdd_orch/tree/main/docs"
Repository = "https://github.com/dspacks/rdd_orch"
Issues = "https://github.com/dspacks/rdd_orch/issues"
Changelog = "https://github.com/dspacks/rdd_orch/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = []  # Currently no installable package structure, notebook-based

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/examples/*",
    "*/archived_versions/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | \.eggs
  | archived_versions
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["archived_versions/*", "examples/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "archived_versions",
    "examples",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "archived_versions/",
    "examples/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
